--- a/8592_final.html
+++ b/8592_final.html
@@ -13144,13 +13144,14 @@ div#notebook {
 
   
 
-  <div class="
+  <div class="nbinteract-hide_in
       cell border-box-sizing code_cell rendered">
     <div class="input">
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">sys</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#nbi:hide_in</span>
+<span class="kn">import</span> <span class="nn">sys</span>
 
 <span class="k">if</span> <span class="ow">not</span> <span class="n">sys</span><span class="o">.</span><span class="n">warnoptions</span><span class="p">:</span>
     <span class="kn">import</span> <span class="nn">warnings</span>
@@ -13250,13 +13251,14 @@ div#notebook {
 
   
 
-  <div class="
+  <div class="nbinteract-hide_in
       cell border-box-sizing code_cell rendered">
     <div class="input">
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">class</span> <span class="nc">Sim2Ds</span><span class="p">:</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#nbi:hide_in</span>
+<span class="k">class</span> <span class="nc">Sim2Ds</span><span class="p">:</span>
     <span class="sd">&#39;&#39;&#39;  2D simulation, stochastic, simple&#39;&#39;&#39;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">L</span> <span class="o">=</span> <span class="mi">100</span><span class="p">,</span> <span class="n">Tmax</span> <span class="o">=</span> <span class="mi">1000</span><span class="p">,</span> <span class="n">N0</span> <span class="o">=</span> <span class="p">[],</span> <span class="n">Ts</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">dt</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span> <span class="n">K</span><span class="o">=</span><span class="mi">1000</span><span class="p">,</span> <span class="n">model</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span> <span class="n">fs</span><span class="o">=</span><span class="mf">0.05</span><span class="p">,</span> <span class="n">Filename</span> <span class="o">=</span> <span class="s1">&#39;temp.npz&#39;</span>  <span class="p">):</span>
         <span class="c1">#L, Tmax, N0, Ts, filename = param;</span>
@@ -13527,40 +13529,6 @@ div#notebook {
             <span class="n">us</span><span class="p">[</span><span class="n">i</span><span class="p">,</span><span class="n">j</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span><span class="n">vt</span> <span class="o">+</span> <span class="n">vb</span><span class="p">)</span><span class="o">/</span><span class="mi">2</span><span class="p">;</span>
             <span class="n">vs</span><span class="p">[</span><span class="n">i</span><span class="p">,</span><span class="n">j</span><span class="p">]</span> <span class="o">=</span> <span class="mi">2</span><span class="o">*</span><span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span> <span class="p">(</span><span class="mi">1</span><span class="o">-</span><span class="n">d1</span><span class="p">)</span><span class="o">*</span><span class="p">(</span><span class="mi">1</span><span class="o">+</span><span class="n">s</span><span class="p">)</span> <span class="p">)</span> <span class="o">-</span> <span class="mi">2</span><span class="p">;</span>    
     <span class="k">return</span> <span class="p">(</span><span class="n">vs</span><span class="p">,</span><span class="n">us</span><span class="p">)</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-  </div>
-
-  
-
-  <div class="
-      cell border-box-sizing code_cell rendered">
-    <div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-  </div>
-
-  
-
-  <div class="
-      cell border-box-sizing code_cell rendered">
-    <div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
 </pre></div>
 
     </div>
